--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,3 +12,9 @@
 
 </body>
 </html>
+
+<script type="text/javascript">
+  $('.svpx-header').click(function(){
+    window.location = '/home'
+  });
+</script>
