--- a/app/views/series/_form.haml
+++ b/app/views/series/_form.haml
@@ -1,12 +1,20 @@
-%h1 Create new Series
-=form_for @series do |f|
-  .row
-    =f.label :title
-    =f.text_field :title
+.series-form
+  %h1 Create new Series
+  =form_for @series do |f|
+    .row
+      =f.label :title, "Series Title"
+      =f.text_field :title
 
-  .row
-    %p Enter the part of the title that will be the same for every video in the series.
-    =f.label :regex
-    =f.text_field :regex
+    .row
+      %p=@title
+      %p Enter the part of the title that will be the same for every video in the series.
+      =f.label :regex
+      =f.text_field :regex
 
-  =f.submit "Create"
+    =f.submit "Create"
+
+
+%h2 Matched Videos
+.series
+%script
+  new SVPX.SeriesFormPage();
