--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -5,48 +5,87 @@
 
 .clear-div
   clear: both
+  height: 1px
+  line-height: 1px
 
 .channel-container, .video-container
-  border: 1px solid black
   float: left
-  width: 30%
-  margin: 4px
-  padding: 4px
+  +box-sizing(border-box)
+  padding: 5px
   display: inline-block
+  width: 30%
+  .handle
+    cursor: move
+    background: #bababa
+    border: 1px solid #b4b4b4
+    border-radius: 2px 2px 0 0
+    padding: 5px 5px 5px 10px
+    .title
+      color: #616161
+      float: left
+      font-family: Tahoma, Arial, Sans-serif
+      font-size: 20px
+      font-weight: bold
+      line-height: 28px
+      text-shadow: 0.5px 0.5px 0.5px #E0E0E0
   .video
-    width: 100%
-    display: inline-block
-    cursor: pointer
+    background: #dfdfdf
+    border: 1px solid #ccc
+    border-top: 0
+    border-radius: 0 0 2px 2px
+    padding: 5px
     .thumbnail
       float: left
-      width: 30%
+      width: 125px
       img
-        width: 100%
+        max-height: 90px
+        max-width: 120px
     .description
+      color: #666
       float: left
-      width: 70%
+      font-family: Tahoma, Arial, Sans-serif
+      font-size: 12px
+      line-height: 20px
+      width: 170px
     .watched-link
-      display: inline-block
-      a
+      a, a:visited, a:hover
+        background: #444
+        border-radius: 2px
+        color: #fff
+        display: inline-block
+        font-family: Tahoma, Arial, Sans-serif
+        font-size: 14px
+        line-height: 20px
+        padding: 4px 7px 5px
         text-decoration: none
-      clear: both
-      float: left
-      border: 1px solid white
-      &:hover
-        border: 1px solid black
 
 .video-container
-  h3
-    float: left
-  .remove-series-button
-    float: right
-    cursor: pointer
+  .handle
+    .remove-series-button
+      a, a:visited, a:hover
+        background: #666
+        border-radius: 2px
+        color: #fff
+        display: block
+        float: right
+        font-family: Tahoma, Arial, Sans-serif
+        font-size: 14px
+        line-height: 22px
+        padding: 0px 5px
+        text-decoration: none
 
 .channels, .series
   margin-left: 5%
 .channel-container
   height: 400px
-  overflow-y: scroll
+  border: 1px solid #999
+  +box-shadow(0px 0px 4px #888)
+  margin: 4px
+  .video-container
+    width: 100%
+    height: 345px
+    overflow-y: scroll
+    display: block
 
 .series-form
   text-align: center
