--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -48,16 +48,15 @@
       line-height: 20px
       width: 170px
     .watched-link
-      a, a:visited, a:hover
-        background: #444
-        border-radius: 2px
-        color: #fff
-        display: inline-block
-        font-family: Tahoma, Arial, Sans-serif
-        font-size: 14px
-        line-height: 20px
-        padding: 4px 7px 5px
-        text-decoration: none
+      background: #444
+      border-radius: 2px
+      color: #fff
+      display: inline-block
+      font-family: Tahoma, Arial, Sans-serif
+      font-size: 14px
+      line-height: 20px
+      padding: 4px 7px 5px
+      cursor: pointer
 
 .video-container
   .handle
