--- a/app/views/home/home.haml
+++ b/app/views/home/home.haml
@@ -25,13 +25,14 @@
 %h2 Other Videos
 .channels
   -@channels.each do |channel|
-    -if channel.videos.size > 0
+    -videos = channel.videos.where(series_id: nil, watched: false).order('created_at DESC')
+    -if videos.count > 0
       .channel-container{data: {id: channel.id}}
         .handle
           .title=channel.title
           .clear-div
         .video-container
-          -channel.videos.where(series_id: nil, watched: false).order('created_at DESC').each do |video|
+          -videos.each do |video|
             =render partial: 'video', locals: {video: video}
 
 %script
