--- a/app/views/home/home.haml
+++ b/app/views/home/home.haml
@@ -25,7 +25,7 @@
 %h2 Other Videos
 .channels
   -@channels.each do |channel|
-    -videos = channel.videos.where(series_id: nil, watched: false).order('created_at DESC')
+    -videos = channel.videos.where(series_id: nil, watched: false).order('created_at DESC').limit(5)
     -if videos.count > 0
       .channel-container{data: {id: channel.id}}
         .handle
