--- a/app/views/channels/show.haml
+++ b/app/views/channels/show.haml
@@ -1,5 +1,17 @@
-%h2=@channel.title
+%h2
+  =@channel.title
+  = link_to "Music Mode", music_channel_path(@channel)
 -videos = @channel.videos.where(series_id: nil, watched: false).order('created_at DESC')
 -videos.each do |video|
   .video-container
     =render partial: 'home/video', locals: {video: video}
+
+%h2 Possible New Series
+-@series.each_with_index do |series, index|
+  .video-container{data: {id: series.id}}
+    .handle
+      .title=series.regex
+      .clear-div
+    =render partial: 'home/video', locals: {video: series.videos_from_regex.first}
+  -if (index+1) % 3 == 0
+    .clear-div
