--- a/app/views/channels/show.haml
+++ b/app/views/channels/show.haml
@@ -15,3 +15,6 @@
     =render partial: 'home/video', locals: {video: series.videos_from_regex.first}
   -if (index+1) % 3 == 0
     .clear-div
+
+:javascript
+  new SVPX.ChannelShowPage();
