Add multiple channel music mode.

--- a/app/views/channels/show.haml
+++ b/app/views/channels/show.haml
@@ -1,7 +1,9 @@
 %h2
   =@channel.title
 %div
-  = link_to "Music Mode", music_channel_path(@channel)
+  = label_tag do
+    = check_box_tag "music", "1", @channel.music
+    Music Channel
   = link_to "Get All Videos", get_all_videos_channel_path(@channel)
 -videos = @channel.videos.where(series_id: nil, watched: false).order('created_at DESC')
 -videos.each do |video|
@@ -19,4 +21,4 @@
     .clear-div
 
 :javascript
-  new SVPX.ChannelShowPage();
+  new SVPX.ChannelShowPage("#{@channel.id}");
