Add player css.

--- a/app/views/home/music.haml
+++ b/app/views/home/music.haml
@@ -1,5 +1,5 @@
-#player-wrapper1
-#player-wrapper2
+#player-wrapper1.player
+#player-wrapper2.player
 
 :javascript
   new SVPX.MusicPage("#{@video.youtube_id}");
