Make shit better. Add skip and hate button.

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -96,3 +96,18 @@
 .player
   float: left
   padding: 8px
+  display: none
+
+.button
+  border-radius: 2px
+  border: 1px solid black
+  cursor: pointer
+  float: left
+  height: 40px
+  line-height: 40px
+  text-align: center
+  width: 100px
+
+.video-controls
+  margin: auto
+  width: 50%
