--- a/app/views/home/music.haml
+++ b/app/views/home/music.haml
@@ -1,3 +1,9 @@
+.video-controls
+  .button.skip Skip
+  .button.hate Hate
+  .button.love Love
+
+.clear-div
 #player-wrapper1.player
 #player-wrapper2.player
 
