--- a/app/views/home/channels.haml
+++ b/app/views/home/channels.haml
@@ -2,8 +2,8 @@
   My Subscriptions
 
 %div
-  =link_to "Update Subscriptions from Youtube", "/update_subscriptions"
+  = link_to "Update Subscriptions from Youtube", "/update_subscriptions"
 
--current_user.channels.each do |channel|
+- current_user.channels.each do |channel|
   %div
-    =channel.title
+    = link_to channel.title, channel
