Add plays to music page.

--- a/app/views/home/music.haml
+++ b/app/views/home/music.haml
@@ -4,6 +4,10 @@
     .button.hate Hate
     .button.love{class: "#{@video.love ? 'has-love' : ''}"} Love
 
+  %div
+    Plays:
+    .plays 0
+
   .clear-div
   #player-wrapper1.player
   #player-wrapper2.player
