--- a/app/views/channels/show.haml
+++ b/app/views/channels/show.haml
@@ -5,7 +5,7 @@
     = check_box_tag "music", "1", @channel.music
     Music Channel
   = link_to "Get All Videos", get_all_videos_channel_path(@channel)
--videos = @channel.videos.where(series_id: nil, watched: false).order('created_at DESC')
+-videos = @channel.videos.where(series_id: nil, watched: false).order("published_at DESC")
 -videos.each do |video|
   .video-container
     =render partial: 'home/video', locals: {video: video}
