Refactor music page ytconfig.

--- a/app/views/home/home.haml
+++ b/app/views/home/home.haml
@@ -8,7 +8,7 @@
 %div
   =link_to "Create a new series", new_series_path
 %div
-  =link_to "Start MUSIC MODE", music_path
+  =link_to "Start MUSIC MODE", music_videos_path
 .series
   -@series.each_with_index do |series, index|
     .video-container{data: {id: series.id}}
