don't delete channels.

--- a/app/views/videos/music.haml
+++ b/app/views/videos/music.haml
@@ -11,6 +11,7 @@
     .plays= @video.plays || 0
     Channel:
     .channel-title= @video.channel.title
+    .video-title= @video.title
 
   #player-wrapper1.player
   #player-wrapper2.player
