Show date on music page.

--- a/app/views/videos/music.haml
+++ b/app/views/videos/music.haml
@@ -12,6 +12,7 @@
     Channel:
     .channel-title= @video.channel.title
     .video-title= @video.title
+    .video-date= @video.published_at_display
 
   #player-wrapper1.player
   #player-wrapper2.player
