--- a/app/views/home/home.haml
+++ b/app/views/home/home.haml
@@ -10,17 +10,17 @@
 %div
   =link_to "Start MUSIC MODE", music_videos_path
 .series
-  -@series.each_with_index do |series, index|
-    .video-container{data: {id: series.id}}
+  - @series_videos.each_with_index do |video, index|
+    .video-container{data: {id: video.series_id}}
       .handle
-        .title=series.title
-        .remove-series-button=link_to "X", series_path(series), method: "DELETE"
+        .title= video.series.title
+        .remove-series-button=link_to "X", series_path(video.series), method: "DELETE"
         .clear-div
-      -if series.next_video
-        =render partial: 'video', locals: {video: series.next_video}
-      -else
+      - if !video.watched
+        = render partial: 'video', locals: {video: video}
+      - else
         You've watched all of this series so far!
-    -if (index+1) % 3 == 0
+    - if (index+1) % 3 == 0
       .clear-div
 
 .clear-div
