--- a/app/views/channels/show.haml
+++ b/app/views/channels/show.haml
@@ -1,7 +1,7 @@
 %h2
   =@channel.title
 %div
-  = link_to "Delete", channel_path(@channel), method: :delete
+  = link_to "Delete", channel_path(@channel), method: :delete, data: { confirm: "Are you sure you want to delete?" }
   %br
   = label_tag do
     = check_box_tag "music", "1", @channel.music
