--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -10,7 +10,7 @@
   line-height: 1px
 
 .channel-container, .video-container
-  +box-sizing(border-box)
+  box-sizing: border-box
   display: inline-block
   float: left
   padding: 5px
@@ -77,7 +77,7 @@
 .channels, .series
   margin-left: 5%
 .channel-container
-  +box-shadow(0px 0px 4px #888)
+  box-shadow: 0px 0px 4px #888
   border: 1px solid #999
   height: 400px
   margin: 4px
