--- a/app/views/home/channels.haml
+++ b/app/views/home/channels.haml
@@ -4,6 +4,12 @@
 %div
   = link_to "Update Subscriptions from Youtube", "/update_subscriptions"
 
-- current_user.channels.each do |channel|
+%h2 Music Channels
+- current_user.channels.music.each do |channel|
+  %div
+    = link_to channel.title, channel
+
+%h2 Normal Channels
+- current_user.channels.normal.each do |channel|
   %div
     = link_to channel.title, channel
